objects/Salesforce_Request__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Details_Regarding_My_Request__c</fullName>
        <inlineHelpText>Please provide as much detail as possible to help us help you! Links to records, screenshots, etc. If you would like to upload any files, navigate to the related list to create an attachment.</inlineHelpText>
        <label>Additional Details Regarding My Request</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Assigned_Owner__c</fullName>
        <formula>IF( Assigned_To__r.FirstName == &apos;&apos;, IF( ISBLANK(Owner:User.FirstName) ,  Owner:Queue.QueueName , Owner:User.FirstName + &apos; &apos; + Owner:User.LastName ) ,  Assigned_To__r.FirstName + &apos; &apos; + Assigned_To__r.LastName)</formula>
        <label>Assigned/Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_To_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to track when someone has already Assigned the Request &amp; Inquiry.</description>
        <label>&quot;Assigned To&quot; field is Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This field will automatically update to reflect the person assigned to your request.</inlineHelpText>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Salesforce_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_to_Manager__c</fullName>
        <description>Assigned to manager Full name meant to allow IST managers to track employees on their team</description>
        <formula>Assigned_To__r.Manager.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Manager of  who the ticket is assigned to</inlineHelpText>
        <label>Assigned to Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_to_Profile__c</fullName>
        <description>profile of the person closing the ticket</description>
        <formula>Assigned_To__r.Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned to Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auction_Buyer_IST_Rep__c</fullName>
        <formula>Auction__r.buyer_dealership__r.IST_Account_Owner__r.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Auction Buyer IST Rep</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Auction</label>
        <referenceTo>Auction__c</referenceTo>
        <relationshipName>Salesforce_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Buyer_Aware__c</fullName>
        <description>Question for unwind requests specifically, intended to help streamline the time it takes to ask this question and re-assign.</description>
        <inlineHelpText>Required for Unwind Requests ONLY</inlineHelpText>
        <label>Is Buyer aware of this Unwind Request?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Salesforce_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Completed_the_escalation_checklist__c</fullName>
        <label>Completed the escalation checklist?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Created_By_Profile__c</fullName>
        <description>Lists the profile of the  person creating the  Request &amp; Inquiry Ttcket</description>
        <formula>CreatedBy.Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Date_Time_For_Reporting__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date/Time For Reporting</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Customer_Feedback_Attitude__c</fullName>
        <label>Customer Feedback Experience</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Positive</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Negative</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Feedback__c</fullName>
        <label>Customer Feedback</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Success_Resolution__c</fullName>
        <label>Customer Success Resolution</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date_Requested__c</fullName>
        <description>When a customer reported the issue to someone leading up to involving the Customer Experience team</description>
        <label>Date Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Time_Closed__c</fullName>
        <description>Workflow controlled stamp when Status = Closed</description>
        <label>Date/Time Closed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Domain_Related_Data__c</fullName>
        <description>Relates this specific ticket to a ACV Domain team</description>
        <inlineHelpText>Please specify which Domain this ticket relates to.</inlineHelpText>
        <label>Domain Related Data</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Identity,</fullName>
                </value>
                <value>
                    <fullName>Business Ops,</fullName>
                </value>
                <value>
                    <fullName>Demand,</fullName>
                </value>
                <value>
                    <fullName>Supply,</fullName>
                </value>
                <value>
                    <fullName>FSL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employee_Id__c</fullName>
        <description>Employee ID from Ultipro</description>
        <formula>Employee_Name__r.EmployeeNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Employee ID from Ultipro</inlineHelpText>
        <label>Employee Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of Employee involved in request</description>
        <inlineHelpText>Name of Employee involved in request</inlineHelpText>
        <label>Employee Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Requests_Inquiries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Escalate__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checking this box indicates that this requests needs manager review</inlineHelpText>
        <label>Escalate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Escalation_Date__c</fullName>
        <label>Escalation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Escalation_was_brought_to_me_via__c</fullName>
        <label>Escalation was brought to me: via</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Regional Sales Director</fullName>
                </value>
                <value>
                    <fullName>Operations Manager</fullName>
                </value>
                <value>
                    <fullName>Sales Manager</fullName>
                </value>
                <value>
                    <fullName>Social Media</fullName>
                </value>
                <value>
                    <fullName>Google Review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hour_Requested__c</fullName>
        <description>Field used to split assignments based on hour of assignment</description>
        <formula>VALUE( MID( TEXT( CreatedDate -4/24 ), 12, 2) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hour Requested</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importance__c</fullName>
        <description>Measures the importance of Request and Analytics tickets - populated by the assignee for</description>
        <inlineHelpText>Measure the importance of this request, with 10 being the most important.  Take into consideration the business impact of the ticket.</inlineHelpText>
        <label>Importance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Jira_Link__c</fullName>
        <inlineHelpText>If request has been sent to Jira, this will be populated with the link to that ticket.</inlineHelpText>
        <label>Jira Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Jira_Status__c</fullName>
        <inlineHelpText>This will be populated with status of Jira ticket if one exists</inlineHelpText>
        <label>Jira Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Keep_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>used to identify the account to keep when requesting duplicates be fremoved</description>
        <inlineHelpText>This is the Account you wish to KEEP and is the correct account</inlineHelpText>
        <label>Keep Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Requests &amp; Inquiries (Keep Account)</relationshipLabel>
        <relationshipName>Requests_Inquiries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Manager_Email_Address__c</fullName>
        <formula>CreatedBy.Manager.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manager Email Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_Email__c</fullName>
        <defaultValue>$User.Email</defaultValue>
        <label>Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Manager_of_Request_Owner__c</fullName>
        <formula>Owner:User.Manager.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manager of Request Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>My_Request_Is_Related_To__c</fullName>
        <description>The User&apos;s classification of what they need</description>
        <inlineHelpText>Please classify your request so that we can ensure the appropriate person is notified.</inlineHelpText>
        <label>My Request Is Related To</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Abandoned Vehicle</fullName>
                </value>
                <value>
                    <fullName>Analytics, Reporting, and List Views</fullName>
                </value>
                <value>
                    <fullName>Arbitration</fullName>
                </value>
                <value>
                    <fullName>Account Management</fullName>
                </value>
                <value>
                    <fullName>Auction Kill</fullName>
                </value>
                <value>
                    <fullName>Capital</fullName>
                </value>
                <value>
                    <fullName>Collections</fullName>
                </value>
                <value>
                    <fullName>Dealer Documents</fullName>
                </value>
                <value>
                    <fullName>Employment Status Request</fullName>
                </value>
                <value>
                    <fullName>Error message or bug</fullName>
                </value>
                <value>
                    <fullName>Field Service Lightning</fullName>
                </value>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>How to use Salesforce</fullName>
                </value>
                <value>
                    <fullName>Major Accounts</fullName>
                </value>
                <value>
                    <fullName>I&apos;m not sure how to classify my need</fullName>
                </value>
                <value>
                    <fullName>Incorrect or missing data</fullName>
                </value>
                <value>
                    <fullName>Log an Interaction</fullName>
                </value>
                <value>
                    <fullName>NADA</fullName>
                </value>
                <value>
                    <fullName>New feature or development</fullName>
                </value>
                <value>
                    <fullName>Off-lease Inspection Schedule Request</fullName>
                </value>
                <value>
                    <fullName>Payments</fullName>
                </value>
                <value>
                    <fullName>Returns &amp; ACV Owned</fullName>
                </value>
                <value>
                    <fullName>Salesforce user updates &amp; new user requests</fullName>
                </value>
                <value>
                    <fullName>Territory zip code changes</fullName>
                </value>
                <value>
                    <fullName>Titles</fullName>
                </value>
                <value>
                    <fullName>Training Schedule Request</fullName>
                </value>
                <value>
                    <fullName>Transportation</fullName>
                </value>
                <value>
                    <fullName>Unwind_Request</fullName>
                    <label>Unwind Request</label>
                </value>
                <value>
                    <fullName>Duplicate Account</fullName>
                </value>
                <value>
                    <fullName>Re-Run, Pricing or Trim</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Open_to_Close__c</fullName>
        <formula>IF (d2subd1__c &gt; 0, 
TEXT(FLOOR(d2subd1__c)) &amp; &quot; days &quot; &amp; 
TEXT( FLOOR( 24 * (d2subd1__c - FLOOR(d2subd1__c) ))) &amp; &quot; hours &quot; &amp; 
TEXT( ROUND(60 * (ROUND( 24 * (d2subd1__c - FLOOR(d2subd1__c) ),8) - FLOOR( 
ROUND( 24 * (d2subd1__c - FLOOR(d2subd1__c) ),8)) ),0)) &amp; &quot; min &quot; 
, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open to Close</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Open_to_Close_for_Reporting__c</fullName>
        <formula>(d2subd1__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open to Close for Reporting</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Owner_Full_Name__c</fullName>
        <formula>Owner:User.FirstName + &quot; &quot; + Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Asignee__c</fullName>
        <defaultValue>$User.Email</defaultValue>
        <label>Previous Assignee</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Problem_Area__c</fullName>
        <label>Problem Area</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>My_Request_Is_Related_To__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Lien Release</fullName>
                </value>
                <value>
                    <fullName>State DMV</fullName>
                </value>
                <value>
                    <fullName>Duplicate title</fullName>
                </value>
                <value>
                    <fullName>Miscommunication</fullName>
                </value>
                <value>
                    <fullName>Account Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region_of_Employee__c</fullName>
        <description>Region of the employee related to this request</description>
        <inlineHelpText>Region of the employee related to this request</inlineHelpText>
        <label>Region of Employee</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rejected_Reason__c</fullName>
        <description>When rejected the rejected reason must be filled out has a validation rule associated with this</description>
        <inlineHelpText>Why was the request rejected</inlineHelpText>
        <label>Rejected Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Salesforce_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Departments__c</fullName>
        <label>Related Departments</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ACV Capital</fullName>
                </value>
                <value>
                    <fullName>Analytics</fullName>
                </value>
                <value>
                    <fullName>Arbitration</fullName>
                </value>
                <value>
                    <fullName>Major Accounts CSM</fullName>
                </value>
                <value>
                    <fullName>Covid</fullName>
                </value>
                <value>
                    <fullName>CR Review</fullName>
                </value>
                <value>
                    <fullName>Dealer Documents</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>HR and Training</fullName>
                </value>
                <value>
                    <fullName>Inside Sales</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Outside Sales</fullName>
                </value>
                <value>
                    <fullName>Payments and Collections</fullName>
                </value>
                <value>
                    <fullName>Pricing</fullName>
                </value>
                <value>
                    <fullName>Resolutions</fullName>
                </value>
                <value>
                    <fullName>Titles</fullName>
                </value>
                <value>
                    <fullName>Transportation</fullName>
                </value>
                <value>
                    <fullName>TrueFrame</fullName>
                </value>
                <value>
                    <fullName>ASI</fullName>
                </value>
                <value>
                    <fullName>Recruiting</fullName>
                </value>
                <value>
                    <fullName>Telephony</fullName>
                </value>
                <value>
                    <fullName>Commercial Sales</fullName>
                    <isActive>false</isActive>
                    <label>Commercial Sales</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Related_Field__c</fullName>
        <description>Field associated with R&amp;I ticket</description>
        <inlineHelpText>Please specify the field that this bad data ticket is related to, if it is not available please add it to this picklist by API Name, we utilize this for reporting purposes.</inlineHelpText>
        <label>Related Field</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account:BillingAddress,</fullName>
                </value>
                <value>
                    <fullName>Account:Dealership_Notes__c,</fullName>
                </value>
                <value>
                    <fullName>Account:Legal_Address__c,</fullName>
                </value>
                <value>
                    <fullName>Account:Pickup_Notes__c,</fullName>
                </value>
                <value>
                    <fullName>Case: Date_Delivered_Actual__c</fullName>
                </value>
                <value>
                    <fullName>Case:Seller_Contact__c</fullName>
                </value>
                <value>
                    <fullName>Case:Seller_Dealership__c,</fullName>
                </value>
                <value>
                    <fullName>Case: Vehicle__c,</fullName>
                </value>
                <value>
                    <fullName>IST_Rep_Account_Manager__c</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Contact: phone__c</fullName>
                </value>
                <value>
                    <fullName>Cose:Posted_Price__c</fullName>
                </value>
                <value>
                    <fullName>Account:Compliant_Dealer_License__c</fullName>
                </value>
                <value>
                    <fullName>Account: cell__c</fullName>
                </value>
                <value>
                    <fullName>Auction: Buyer_Payment_Method</fullName>
                </value>
                <value>
                    <fullName>Case: Year_Make_Model__c</fullName>
                </value>
                <value>
                    <fullName>Case: Title Case Not Created</fullName>
                </value>
                <value>
                    <fullName>Case: Date_Transporter_Paid__c</fullName>
                </value>
                <value>
                    <fullName>Auction: odometer__c</fullName>
                </value>
                <value>
                    <fullName>Account: Primary_Contact</fullName>
                </value>
                <value>
                    <fullName>Case: Missing Arb Case</fullName>
                </value>
                <value>
                    <fullName>Case: Empty Records</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Related_Vehicle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Vehicle</label>
        <referenceTo>Vehicle__c</referenceTo>
        <relationshipName>Salesforce_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RemoveAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the account you wish to ave deleted from Salesforce due to duplicate</description>
        <inlineHelpText>This is the Account that needs to be removed from Salesforce and will be DELETED.</inlineHelpText>
        <label>Remove Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Requests &amp; Inquiries (Remove Account)</relationshipLabel>
        <relationshipName>Requests_Inquiries1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ReportCounter__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ReportCounter</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Report_Link__c</fullName>
        <inlineHelpText>Use this field to enter a link to the report</inlineHelpText>
        <label>Report Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Report_Source__c</fullName>
        <description>This field is to identify where the report will be created from.</description>
        <label>Report Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Delighted</fullName>
                </value>
                <value>
                    <fullName>Netsuite</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
                <value>
                    <fullName>Tableau</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Reasons__c</fullName>
        <description>User populated with dependent picklist based on the ‘my request is related to’ to further describe request reason</description>
        <inlineHelpText>This field is used to further categorize your need.</inlineHelpText>
        <label>Request Reasons</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>My_Request_Is_Related_To__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ACH Setup</fullName>
                </value>
                <value>
                    <fullName>Account Manager Request</fullName>
                </value>
                <value>
                    <fullName>ACV Transport</fullName>
                </value>
                <value>
                    <fullName>Account Activation</fullName>
                </value>
                <value>
                    <fullName>Buyer Arranged Shipment</fullName>
                </value>
                <value>
                    <fullName>Call escalation</fullName>
                </value>
                <value>
                    <fullName>Collections Inquiry</fullName>
                </value>
                <value>
                    <fullName>Contesting Arb Decision</fullName>
                </value>
                <value>
                    <fullName>Disclosure Dispute</fullName>
                </value>
                <value>
                    <fullName>CR Question</fullName>
                </value>
                <value>
                    <fullName>Current Arb Update</fullName>
                </value>
                <value>
                    <fullName>Dealer Account Update</fullName>
                </value>
                <value>
                    <fullName>ETA Update</fullName>
                </value>
                <value>
                    <fullName>Expired Dealer Documents</fullName>
                </value>
                <value>
                    <fullName>Feedback</fullName>
                </value>
                <value>
                    <fullName>Floorplan Delay</fullName>
                </value>
                <value>
                    <fullName>Goodwill</fullName>
                </value>
                <value>
                    <fullName>Goodwill CS</fullName>
                </value>
                <value>
                    <fullName>Double  Sale</fullName>
                </value>
                <value>
                    <fullName>Unhappy Dealer</fullName>
                </value>
                <value>
                    <fullName>Customer Feedback</fullName>
                </value>
                <value>
                    <fullName>Late Title</fullName>
                </value>
                <value>
                    <fullName>Problem Title</fullName>
                </value>
                <value>
                    <fullName>Payments Status Update</fullName>
                </value>
                <value>
                    <fullName>Payment Hold</fullName>
                </value>
                <value>
                    <fullName>Pickup/Delivery Address Change</fullName>
                </value>
                <value>
                    <fullName>Damaged Vehicle</fullName>
                </value>
                <value>
                    <fullName>Pickup ETA</fullName>
                </value>
                <value>
                    <fullName>Post-Auction Transport Request</fullName>
                </value>
                <value>
                    <fullName>Priority Pick-Up Request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_to_Close__c</fullName>
        <formula>DATEVALUE( Date_Time_Closed__c) - Date_Requested__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Request to Close(Days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Requested_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requested By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Salesforce_Requests2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requested_Employment_Status__c</fullName>
        <description>The type of employment status they would like their employee to be updated to</description>
        <inlineHelpText>Select the employment status you wish for your employee to be updated to</inlineHelpText>
        <label>Requested Employment Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Full Time</fullName>
                </value>
                <value>
                    <fullName>Reduced Hours</fullName>
                </value>
                <value>
                    <fullName>Full Furlough</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requester_Profile__c</fullName>
        <formula>Owner:User.Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requester Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requester_Role__c</fullName>
        <formula>Owner:User.Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requester Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requestor__c</fullName>
        <formula>Owner:User.FirstName + &quot; &quot; + Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requester</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Root_Causes__c</fullName>
        <label>Root Causes</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ACV Error</fullName>
                </value>
                <value>
                    <fullName>Buyer Error</fullName>
                </value>
                <value>
                    <fullName>Seller Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>